<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

                    <include layout="@layout/header_layout"
                        android:layout_height="120dp"
                        android:layout_width="match_parent"/>

                    <LinearLayout
                        android:id="@+id/ll_scan_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/speakers_grey"
                            android:padding="3dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/spekers"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/textcolor"
                            android:textSize="@dimen/testsize_mid"/>

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_speker"
                        android:gravity="center"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/textcolor_light"
                        android:textSize="@dimen/testsize_mid"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:gravity="center"
                        android:paddingLeft="3dp"
                        android:textColor="@color/textcolor_light"
                        android:textSize="@dimen/testsize_mid"/>


                </LinearLayout>


                    <GridView
                        android:id="@+id/gv_speakers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:visibility="visible"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:id="@+id/tv_no_speaker_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:visibility="gone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/testsize_max"
                        android:text="@string/no_speaker_data"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

    </LinearLayout>

</RelativeLayout>