<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/ll_hedaer"
        layout="@layout/header_layout"
        android:layout_height="120dp"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_hedaer">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_scan_contact"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/venue"
                        android:padding="3dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/venue"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue_detail"
                android:layout_marginLeft="20dp"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:textColor="@color/textcolor_light"
                android:textSize="@dimen/testsize_mid"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/nearest_landmark"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/testsize_min"/>

            <TextView
                android:id="@+id/tv_openingmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/open_map"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/textcolor"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/testsize_min"/>


                <LinearLayout
                    android:id="@+id/ll_mao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:minHeight="30dp"
                    android:background="@color/schedulelist_textbg">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:padding="5dp"
                        android:minHeight="30dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textSize="@dimen/testsize_min"/>

                    <ImageView
                        android:id="@+id/iv_venue_share"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/share_map"
                        android:padding="5dp"
                        />

                    <ImageView
                        android:id="@+id/iv_venue_navigate"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/navigate_map"
                        android:padding="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <com.google.android.gms.maps.MapView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/mapView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="50dp"
                        android:layout_below="@+id/relativelayout_actionbar"/>


                </LinearLayout>

            </LinearLayout>

    </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="8dp"/>

        </LinearLayout>

</RelativeLayout>