<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

 <!--   <include
        android:id="@+id/ll_hedaer"
        layout="@layout/header_layout"
        android:layout_height="120dp"
        android:layout_width="match_parent"/> -->

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:id="@+id/ll_hedaer">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/tv_worldcamp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@+id/tv_days_togo"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/testsize_mid"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_days_togo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/testsize_max"
            android:text="2 days to go"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_worldcamp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_worldcamp"
            android:text="@string/title_header_date"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/testsize_mid"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_hedaer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/ll_scan_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/speakers_grey"
                            android:padding="3dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/spekers"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/textcolor"
                            android:textSize="@dimen/testsize_mid"/>

                    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_speker"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/textcolor_light"
                    android:textSize="@dimen/testsize_mid"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:paddingLeft="3dp"
                    android:textColor="@color/textcolor_light"
                    android:textSize="@dimen/testsize_mid"/>


            </LinearLayout>



            <TextView
                        android:id="@+id/tv_speaker_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Speaker Name"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginLeft="20dp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_speaker_detail_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/default_user"/>

                    <TextView
                        android:id="@+id/tv_speaker_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Speaker Details"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:layout_marginLeft="20dp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

            <TextView
                        android:id="@+id/tv_speaker_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Speaker Details"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

            <TextView
                        android:id="@+id/tv_session_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

            <TextView
                        android:id="@+id/tv_session_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:visibility="gone"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

            <TextView
                android:id="@+id/tv_speaker_detail_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:visibility="gone"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/testsize_mid"/>


            <TextView
                        android:id="@+id/tv_speaker_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Speaker Detail"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:visibility="gone"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>

            <TextView
                      android:id="@+id/tv_speaker_detail_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:gravity="start"
                        android:visibility="gone"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/testsize_mid"/>



    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"/>

    </LinearLayout>

</RelativeLayout>